--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "type": "module",
   "dependencies": {
     "chalk": "^5.4.1",
-    "prompt": "^1.3.0"
+    "prompt": "^1.3.0",
+    "qrcode-terminal": "^0.12.0"
   }
 }
