--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:prod": "node src/index.js",
-    "start:dev": "node --watch src/index.js"
+    "start:prod": "node --env-file=.env src/index.js",
+    "start:dev": "node --watch --env-file=.env src/index.js"
   },
   "keywords": [],
   "author": "",
